--- a/debian/control
+++ b/debian/control
@@ -2,32 +2,29 @@ Source: logdata-anomaly-miner
 Section: admin
 Priority: optional
 Maintainer: Markus Wurzenberger <markus.wurzenberger@ait.ac.at>
-Build-Depends: debhelper (>= 12.0.0), dh-python, docbook-xsl, docbook-xml, python3-all, xsltproc
-Standards-Version: 4.2.1
-Homepage: https://launchpad.net/logdata-anomaly-miner/
-Vcs-Git: https://git.launchpad.net/logdata-anomaly-miner
-Vcs-Browser: https://git.launchpad.net/logdata-anomaly-miner/tree/
+Build-Depends: debhelper-compat (= 13), dh-python, docbook-xsl, docbook-xml, python3-all, xsltproc
+Standards-Version: 4.5.0
+Homepage: https://aecid.ait.ac.at/
+Vcs-Git: https://github.com/ait-aecid/logdata-anomaly-miner.git
+Vcs-Browser: https://github.com/ait-aecid/logdata-anomaly-miner
 
 Package: logdata-anomaly-miner
 Architecture: all
 Depends: ${python3:Depends}, python3-tz, ${misc:Depends}, python3-cerberus, python3-pkg-resources, python3-setuptools
 Suggests: python3-scipy
-Description: This tool allows one to create log analysis pipelines
- to analyze log data streams and detect violations or anomalies
- in it. It can be run from console, as daemon with e-mail alerting
- or embedded as library into own programs. It was designed to
+Description: This tool allows one to create log analysis pipelines.
+ This tool allows to analyze log data streams and detect violations or anomalies
+ in it. It can be run from console, as daemon with e-mail alerting, or
+ embedded as library into own programs. It was designed to
  run the analysis with limited resources and lowest possible permissions
  to make it suitable for production server use. Analysis methods
  include:
  .
-  * static check patterns similar to logcheck but with extended
-    syntax and options.
+  * log line parsing and filtering with extended syntax and options
   * detection of new data elements (IPs, user names, MAC addresses)
   * statistical anomalies in log line values and frequencies
-  * correlation rules between log lines as described in th AECID
-    approach http://dx.doi.org/10.1016/j.cose.2014.09.006
+  * correlation rules between log lines
  .
- The tool is suitable to replace logcheck but also to operate
- as a sensor feeding a SIEM.
+ The tool is suitable to operate as a sensor feeding a SIEM and distributing messages via message queues.
  .
- Please report bugs at https://bugs.launchpad.net/logdata-anomaly-miner/+filebug
+ Please report bugs at https://github.com/ait-aecid/logdata-anomaly-miner/issues.
