--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - sudo pip3 install kafka-python -U
   - sudo ln -s /usr/lib/python3/dist-packages/kafka /etc/aminer/conf-enabled/kafka
   - cd aecid-testsuite
-  #- sudo chmod +x runUnittests.sh
+  - sudo chmod +x runUnittests.sh
   - sudo chmod +x runAMinerDemo.sh
   - sudo chmod +x runAMinerIntegrationTest.sh
   - sudo chmod +x runCoverageTests.sh
