Changed start condition for parser-model in yaml-config
Before this commit, the yamlconfig searched for the parser-model with id
"START". This was the first model of the parser-chain. This commit
changed that behavior by adding the config-variable "start" to the
yaml-schema. "start: True" will mark the first parser-model now.

--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -107,6 +107,7 @@ Parser:
           args: 'apache'
 
         - id: 'START'
+          start: True
           type: SequenceModelElement
           name: 'model'
           args: apacheModel
