--- a/source/root/etc/aminer/template_config.yml
+++ b/source/root/etc/aminer/template_config.yml
@@ -106,7 +106,8 @@ Parser:
           name: 'apache'
           args: 'apache'
 
-        - id: 'START'
+        - id: 'startModel'
+          start: True
           type: SequenceModelElement
           name: 'model'
           args: apacheModel
