--- a/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
@@ -88,6 +88,7 @@ Parser:
           args: '"'
 
         - id: 'START'
+          start: True
           type: SequenceModelElement
           name: 'accesslog'
           args:
