Verify parser-key 'start'
This commit validates if a start parser is defined in the yaml-config
and if it is defined only once. This commit introduces a custom
Validator for the yaml-schema.

--- a/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
@@ -87,7 +87,7 @@ Parser:
           name: 'sq6'
           args: '"'
 
-        - id: 'START'
+        - id: 'startModel'
           start: True
           type: SequenceModelElement
           name: 'accesslog'
