--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,14 @@ install:
   - sudo pip3 install coverage
   - sudo ansible-playbook playbook.yml
   - sudo pip3 install kafka-python -U
-  - sudo ln -s /usr/lib/python3/dist-packages/kafka /etc/aminer/conf-enabled/kafka
+  - sudo ln -s /usr/lib/python3/dist-packages/kafka /etc/aminer/conf-enabled/
   - sudo pip3 install -U scipy
   - sudo pip3 install python-dateutil
-  - sudo ln -s /usr/lib/python3/dist-packages/dateutil /etc/aminer/conf-enabled/dateutil
+  - sudo ln -s /usr/lib/python3/dist-packages/dateutil /etc/aminer/conf-enabled/
   - sudo pip3 install six
-  - sudo ln -s /usr/lib/python3/dist-packages/six.py /etc/aminer/conf-enabled/six.py
+  - sudo ln -s /usr/lib/python3/dist-packages/six.py /etc/aminer/conf-enabled/
+  - sudo pip3 install numpy
+  - sudo ln -s /usr/lib/python3/dist-packages/numpy /etc/aminer/conf-enabled/
   - cd aecid-testsuite
   - sudo chmod +x runUnittests.sh
   - sudo chmod +x runAMinerDemo.sh
