--- a/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
@@ -144,6 +144,10 @@ Analysis:
           bin_definition: "modulo_time_bin_definition"
           report_interval: 10
           output_logline: true
+        - type: "EnhancedNewMatchPathValueComboDetector"
+          paths: ["/model/DailyCron/UName", "/model/DailyCron/JobNumber"]
+          tuple_transformation_function: "demo"
+          output_logline: true
 
 EventHandlers:
         - id: "stpe"
