added the NewMatchPathDetector to the yaml configs.

--- a/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
@@ -163,6 +163,8 @@ Analysis:
           paths: ["/model/Sensors/CPUTemp", "/model/Sensors/CPUWorkload", "/model/Sensors/DTM"]
           separator: ";"
           missing_value_string: ""
+        - type: "NewMatchPathDetector"
+          id: "new_match_path_detector"
 
 EventHandlers:
         - id: "stpe"
