added all event handlers to the yaml configs.

--- a/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
@@ -227,4 +227,6 @@ Analysis:
 EventHandlers:
         - id: "stpe"
           type: "StreamPrinterEventHandler"
+        - id: "syslog_writer_event_handler"
+          type: "SyslogWriterEventHandler"
 
