--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -113,9 +113,9 @@ Parser:
           args: apacheModel
 
 Input:
-        verbose: True # optional
-        multi_source: False # optional
-        timestamp_path: "/model/accesslog/time"
+        Verbose: True # optional
+        MultiSource: False # optional
+        TimestampPath: "/model/accesslog/time"
 
 
 Analysis:
@@ -123,18 +123,18 @@ Analysis:
           paths: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
           output_log_line: false # optional default: true
-          learn_mode: true
+          learnMode: true
 
         - type: "NewMatchPathValueComboDetector"
           paths: ["/model/accesslog/request","/model/accesslog/method"]
-          learn_mode: true
+          learnMode: true
           persistence_id: 'accesslog_request' # optional default: Default
           output_log_line: false # optional default: true
           allow_missing_values: false # optional default: false
 
         - type: "NewMatchPathValueComboDetector"
           paths: ["/model/accesslog/request","/model/accesslog/status"]
-          learn_mode: true
+          learnMode: true
 
 EventHandlers:
         - id: "stpe"
