--- a/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/apache_inline_config.yml
@@ -142,26 +142,26 @@ Analysis:
         - type: "HistogramAnalysis"
           histogram_defs: [["/model/RandomTime/Random", "linear_numeric_bin_definition"]]
           report_interval: 10
-          output_log_line: true
+          output_logline: true
         - type: "PathDependentHistogramAnalysis"
           path: "/model/RandomTime"
           bin_definition: "modulo_time_bin_definition"
           report_interval: 10
-          output_log_line: true
+          output_logline: true
         - type: "EnhancedNewMatchPathValueComboDetector"
           paths: ["/model/DailyCron/UName", "/model/DailyCron/JobNumber"]
           tuple_transformation_function: "demo"
-          output_log_line: true
+          output_logline: true
         - type: "MatchFilter"
           paths: ["/model/Random"]
           value_list: [1, 10, 100]
-          output_log_line: true
+          output_logline: true
         - type: "MatchValueAverageChangeDetector"
           timestamp_path: None
           paths: ["/model/Random"]
           min_bin_elements: 100
           min_bin_time: 10
-          output_log_line: true
+          output_logline: true
         - type: "MatchValueStreamWriter"
           stream: "sys.stdout"
           paths: ["/model/Sensors/CPUTemp", "/model/Sensors/CPUWorkload", "/model/Sensors/DTM"]
